--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -19,6 +19,7 @@ body {
   padding: 60px 20px 30px;
   border-top-left-radius: 80px;
   font-size: 13px;
+  margin-top: 148px;
 }
 
 /* Footer Layout using Flexbox */
